# langgraph

./: .env.example  .gitignore  PLAN.md  README.md  agent.py  pyproject.toml  requirements.txt  sample_doc.txt
.github/workflows/: eval.yml
data/golden/: silson_golden.jsonl
data/ocr_bake/: chandra2_p21.png.md  glmocr_p21.png.md  glmocr_p23.png.md
data/ragas/: L0_custom.json  L1_custom.json  L2_custom.json  L2b_custom.json  L2c_custom.json  L3_custom.json  L4_custom.json  L6rec_custom.json  answers_27b.json  critic_scores.json  custom_scores.json  proof_scores.json  stack32_scores.json
docs/: generation-upgrade.md  ocr-benchmark.md  ocr-upgrade-report.md  roadmap.md
domains/: base.py  qc_report.py  receipt.py
eval/: _norm.py  diagnose.py  dump_predictions.py  gate.py  golden_extractions.json  pred_qc_qwen25.json  predictions.json  predictions_qc_report.demo.json  predictions_qc_report.json  predictions_receipt.json  ragas_eval.py  ragas_results.md  report.py  requirements-ragas.txt  results_qc_report.demo.md  results_qc_report.md  results_receipt.md  run.py  run_traced.py  score.py  track.py
eval/baselines/: qc_report.demo.baseline.json  receipt.baseline.json
eval/configs/: baseline.yaml  no_retry.yaml  o_ollama_qwen25.yaml  o_qwen25.yaml  o_qwen3_r0.yaml  small_model.yaml
eval/golden/: qc_report.json  receipt.json
rag/: dl_ocr.py  ocr_test.py  render.py  test_bgem3.py  verify.py
rag/core/: chunk.py  config.py  embedder.py  llm.py  metrics.py  tables.py
rag/eval/: bake_ocr.py  (+20 more)
serve/: README.md  serve_vllm.sh  setup_vllm.sh
tests/: test_eval.py
(+20 files in other folders)
