[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "insurance-rag"
version = "0.1.0"
description = "Agentic OCR+RAG for Korean insurance policy QA (portfolio)"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["rag*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["rag/tests"]
addopts = "-q"
